--- a/src/main/react/src/sass/menu.module.scss
+++ b/src/main/react/src/sass/menu.module.scss
@@ -45,4 +45,5 @@
 .fixedColumn {
   position: fixed;
   height: 100vh;
+  z-index: map_get($zindex, menu);
 }
