--- a/src/main/react/src/sass/nav.module.scss
+++ b/src/main/react/src/sass/nav.module.scss
@@ -2,6 +2,7 @@
 .customNav {
   box-shadow: 0 3px 3px -2px rgba(0, 0, 0, .2) !important;
   font-size: 14px;
+  z-index: map_get($zindex, header) !important;
 }
 
 .input {
